--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,10 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "encore.dev": "^1.48.8",
-    "nodemailer": "^6.10.1",
+    "encore.dev": "^1.50.4",
+    "nodemailer": "^6.10.0",
     "pdfkit": "^0.17.0",
+    "qrcode": "^1.5.4",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
