--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.484.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^7.5.0",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.2.0",
