--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
   redis:
     image: redis:7-alpine
     container_name: helpdesk-redis
+    command: redis-server --appendonly yes --requirepass helpdesk_redis_password
     ports:
       - "6379:6379"
     volumes:
@@ -35,7 +36,7 @@ services:
       - helpdesk-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: ["CMD", "redis-cli", "--no-auth-warning", "-a", "helpdesk_redis_password", "ping"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -45,22 +46,23 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      target: production
     container_name: helpdesk-app
     environment:
       # Database configuration
       DATABASE_URL: postgres://helpdesk_user:helpdesk_password@postgres:5432/helpdesk
       
       # Redis configuration
-      REDIS_URL: redis://redis:6379
+      REDIS_URL: redis://:helpdesk_redis_password@redis:6379
       
       # JWT Secret
-      JWT_SECRET: your-super-secret-jwt-key-change-this-in-production
+      JWT_SECRET: ${JWT_SECRET:-your-super-secret-jwt-key-change-this-in-production}
       
       # SMTP Configuration (optional)
-      SMTP_HOST: smtp.gmail.com
-      SMTP_PORT: 587
-      SMTP_USER: your-email@gmail.com
-      SMTP_PASS: your-app-password
+      SMTP_HOST: ${SMTP_HOST:-smtp.gmail.com}
+      SMTP_PORT: ${SMTP_PORT:-587}
+      SMTP_USER: ${SMTP_USER:-}
+      SMTP_PASS: ${SMTP_PASS:-}
       
       # Application settings
       NODE_ENV: production
@@ -78,11 +80,13 @@ services:
     restart: unless-stopped
     volumes:
       - app_uploads:/app/uploads
+      - app_logs:/app/logs
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:4000/health"]
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:4000/health"]
       interval: 30s
       timeout: 10s
       retries: 5
+      start_period: 60s
 
   # Nginx Reverse Proxy
   nginx:
@@ -92,11 +96,38 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./docker/nginx/ssl:/etc/nginx/ssl
-      - app_uploads:/var/www/uploads
+      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./docker/nginx/ssl:/etc/nginx/ssl:ro
+      - app_uploads:/var/www/uploads:ro
+      - nginx_logs:/var/log/nginx
     depends_on:
-      - helpdesk-app
+      helpdesk-app:
+        condition: service_healthy
+    networks:
+      - helpdesk-network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  # Database backup service
+  db-backup:
+    image: postgres:15-alpine
+    container_name: helpdesk-backup
+    environment:
+      PGPASSWORD: helpdesk_password
+    volumes:
+      - ./backups:/backups
+      - ./scripts/backup-cron.sh:/backup-cron.sh:ro
+    command: >
+      sh -c "
+        echo '0 2 * * * /backup-cron.sh' | crontab - &&
+        crond -f
+      "
+    depends_on:
+      - postgres
     networks:
       - helpdesk-network
     restart: unless-stopped
@@ -108,7 +139,14 @@ volumes:
     driver: local
   app_uploads:
     driver: local
+  app_logs:
+    driver: local
+  nginx_logs:
+    driver: local
 
 networks:
   helpdesk-network:
     driver: bridge
+    ipam:
+      config:
+        - subnet: 172.20.0.0/16
