--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,18 +1,43 @@
+# Main nginx configuration
+user nginx;
+worker_processes auto;
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
+
 events {
     worker_connections 1024;
+    use epoll;
+    multi_accept on;
 }
 
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    # Logging
+    # Logging format
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for"';
+                    '"$http_user_agent" "$http_x_forwarded_for" '
+                    'rt=$request_time uct="$upstream_connect_time" '
+                    'uht="$upstream_header_time" urt="$upstream_response_time"';
 
     access_log /var/log/nginx/access.log main;
-    error_log /var/log/nginx/error.log;
+
+    # Basic settings
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
+    server_tokens off;
+
+    # Buffer settings
+    client_body_buffer_size 128k;
+    client_max_body_size 50M;
+    client_header_buffer_size 1k;
+    large_client_header_buffers 4 4k;
+    output_buffers 1 32k;
+    postpone_output 1460;
 
     # Gzip compression
     gzip on;
@@ -25,64 +50,131 @@ http {
         text/css
         text/xml
         text/javascript
+        text/csv
         application/json
         application/javascript
         application/xml+rss
         application/atom+xml
+        application/pdf
         image/svg+xml;
 
-    # Rate limiting
-    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
+    # Rate limiting zones
+    limit_req_zone $binary_remote_addr zone=api:10m rate=30r/m;
     limit_req_zone $binary_remote_addr zone=login:10m rate=5r/m;
+    limit_req_zone $binary_remote_addr zone=general:10m rate=100r/m;
+
+    # Connection limiting
+    limit_conn_zone $binary_remote_addr zone=conn_limit_per_ip:10m;
 
     # Upstream backend
     upstream helpdesk_backend {
-        server helpdesk-app:4000;
+        server helpdesk-app:4000 max_fails=3 fail_timeout=30s;
+        keepalive 32;
     }
 
+    # Security headers map
+    map $sent_http_content_type $security_headers {
+        default "nosniff";
+    }
+
+    # HTTP to HTTPS redirect server
     server {
         listen 80;
-        server_name localhost;
+        server_name _;
+        
+        # Health check endpoint (allow HTTP for load balancers)
+        location /health {
+            proxy_pass http://helpdesk_backend;
+            access_log off;
+        }
+        
+        # Redirect all other HTTP traffic to HTTPS
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    # Main HTTPS server
+    server {
+        listen 443 ssl http2;
+        server_name _;
+
+        # SSL configuration
+        ssl_certificate /etc/nginx/ssl/cert.pem;
+        ssl_certificate_key /etc/nginx/ssl/key.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-SHA384;
+        ssl_prefer_server_ciphers off;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
 
         # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self'; frame-ancestors 'self';" always;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
-        # Client max body size for file uploads
-        client_max_body_size 10M;
+        # Connection and rate limiting
+        limit_conn conn_limit_per_ip 20;
+        limit_req zone=general burst=50 nodelay;
 
         # Static files and uploads
         location /uploads/ {
             alias /var/www/uploads/;
             expires 1y;
             add_header Cache-Control "public, immutable";
+            add_header X-Content-Type-Options nosniff;
+            
+            # Security for uploaded files
+            location ~* \.(php|php3|php4|php5|phtml|pl|py|jsp|asp|sh|cgi)$ {
+                deny all;
+            }
         }
 
-        # API endpoints with rate limiting
+        # API endpoints with specific rate limiting
         location /api/ {
-            limit_req zone=api burst=20 nodelay;
+            limit_req zone=api burst=10 nodelay;
+            
             proxy_pass http://helpdesk_backend;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Port $server_port;
             
             # Timeouts
             proxy_connect_timeout 60s;
             proxy_send_timeout 60s;
             proxy_read_timeout 60s;
+            
+            # Buffering
+            proxy_buffering on;
+            proxy_buffer_size 4k;
+            proxy_buffers 8 4k;
+            proxy_busy_buffers_size 8k;
         }
 
-        # Login endpoint with stricter rate limiting
-        location /api/auth/login {
-            limit_req zone=login burst=5 nodelay;
+        # Authentication endpoints with stricter rate limiting
+        location ~ ^/api/auth/(login|forgot-password|reset-password) {
+            limit_req zone=login burst=3 nodelay;
+            
             proxy_pass http://helpdesk_backend;
+            proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Shorter timeouts for auth
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
         }
 
         # WebSocket support for real-time features
@@ -95,47 +187,91 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # WebSocket specific timeouts
+            proxy_read_timeout 86400s;
+            proxy_send_timeout 86400s;
         }
 
-        # Health check
+        # Health check endpoint
         location /health {
             proxy_pass http://helpdesk_backend;
             access_log off;
+            
+            proxy_connect_timeout 5s;
+            proxy_send_timeout 5s;
+            proxy_read_timeout 5s;
         }
 
-        # All other requests to the app
+        # Static assets with long cache
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|webp|avif)$ {
+            proxy_pass http://helpdesk_backend;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            add_header X-Content-Type-Options nosniff;
+            
+            # Gzip for text-based assets
+            gzip_static on;
+        }
+
+        # Main application routes
         location / {
             proxy_pass http://helpdesk_backend;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Port $server_port;
             
-            # Cache static assets
-            location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-                expires 1y;
-                add_header Cache-Control "public, immutable";
-                proxy_pass http://helpdesk_backend;
-            }
+            # Timeouts
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+            
+            # Caching for HTML pages
+            proxy_cache_bypass $http_upgrade;
+            add_header X-Cache-Status $upstream_cache_status;
         }
 
         # Error pages
         error_page 404 /404.html;
         error_page 500 502 503 504 /50x.html;
+        
+        location = /404.html {
+            internal;
+            proxy_pass http://helpdesk_backend;
+        }
+        
+        location = /50x.html {
+            internal;
+            proxy_pass http://helpdesk_backend;
+        }
     }
 
-    # HTTPS configuration (uncomment and configure SSL certificates)
-    # server {
-    #     listen 443 ssl http2;
-    #     server_name localhost;
-    #
-    #     ssl_certificate /etc/nginx/ssl/cert.pem;
-    #     ssl_certificate_key /etc/nginx/ssl/key.pem;
-    #     ssl_protocols TLSv1.2 TLSv1.3;
-    #     ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384;
-    #     ssl_prefer_server_ciphers off;
-    #
-    #     # Same configuration as HTTP server above
-    #     # ... (copy all location blocks from above)
-    # }
+    # HTTP server for development/internal access
+    server {
+        listen 8080;
+        server_name localhost;
+
+        # Basic auth for admin access (optional)
+        # auth_basic "Admin Area";
+        # auth_basic_user_file /etc/nginx/.htpasswd;
+
+        location /nginx-status {
+            stub_status on;
+            access_log off;
+            allow 127.0.0.1;
+            allow 172.20.0.0/16;
+            deny all;
+        }
+
+        location /health-detailed {
+            proxy_pass http://helpdesk_backend/health;
+            access_log off;
+        }
+    }
 }
