--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "packageManager": "bun",
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
