--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "encore.dev": "^1.48.8"
+    "encore.dev": "^1.48.8",
+    "nodemailer": "^6.10.1"
   },
   "devDependencies": {
     "typescript": "^5.8.3"
