--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "encore.dev": "^1.48.8",
-    "nodemailer": "^6.10.1"
+    "nodemailer": "^6.10.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "typescript": "^5.8.3"
