--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "bcrypt": "^5.1.1",
     "encore.dev": "^1.48.8",
     "nodemailer": "^6.10.1",
+    "pdfkit": "^0.17.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
