Update Docker configuration for self-host deployment

--- a/.env.example
+++ b/.env.example
@@ -5,11 +5,13 @@
 # DATABASE CONFIGURATION
 # ==============================================
 DATABASE_URL=postgres://helpdesk_user:helpdesk_password@postgres:5432/helpdesk
+POSTGRES_PASSWORD=helpdesk_password_change_this_in_production
 
 # ==============================================
 # REDIS CONFIGURATION
 # ==============================================
 REDIS_URL=redis://:helpdesk_redis_password@redis:6379
+REDIS_PASSWORD=helpdesk_redis_password_change_this_in_production
 
 # ==============================================
 # SECURITY CONFIGURATION
@@ -46,6 +48,16 @@ NODE_ENV=production
 PORT=4000
 
 # ==============================================
+# DOMAIN & SSL CONFIGURATION
+# ==============================================
+# Your domain name (for production)
+DOMAIN_NAME=helpdesk.your-domain.com
+
+# SSL Certificate paths (if using custom certificates)
+SSL_CERT_PATH=/etc/nginx/ssl/cert.pem
+SSL_KEY_PATH=/etc/nginx/ssl/key.pem
+
+# ==============================================
 # BACKUP CONFIGURATION
 # ==============================================
 BACKUP_RETENTION_DAYS=30
@@ -57,15 +69,8 @@ BACKUP_SCHEDULE=0 2 * * *
 LOG_LEVEL=info
 ENABLE_METRICS=true
 
-# ==============================================
-# DOMAIN & SSL CONFIGURATION
-# ==============================================
-# Your domain name (for production)
-DOMAIN_NAME=helpdesk.your-domain.com
-
-# SSL Certificate paths (if using custom certificates)
-SSL_CERT_PATH=/etc/nginx/ssl/cert.pem
-SSL_KEY_PATH=/etc/nginx/ssl/key.pem
+# Grafana admin password
+GRAFANA_PASSWORD=admin123_change_this_in_production
 
 # ==============================================
 # DEVELOPMENT SETTINGS
@@ -73,3 +78,21 @@ SSL_KEY_PATH=/etc/nginx/ssl/key.pem
 # Set to true for development mode
 DEBUG=false
 ENABLE_CORS=false
+
+# ==============================================
+# CLOUD STORAGE (Optional)
+# ==============================================
+# AWS S3 Configuration for backups
+# AWS_ACCESS_KEY_ID=your-access-key
+# AWS_SECRET_ACCESS_KEY=your-secret-key
+# AWS_S3_BUCKET=your-backup-bucket
+# AWS_REGION=us-east-1
+
+# ==============================================
+# NOTIFICATION SETTINGS (Optional)
+# ==============================================
+# Slack webhook for deployment notifications
+# SLACK_WEBHOOK_URL=https://hooks.slack.com/services/...
+
+# Email for system alerts
+# ADMIN_EMAIL=admin@your-domain.com
