--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,10 @@
     "@tanstack/react-query": "^5.72.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jsqr": "^1.4.0",
     "lucide-react": "^0.484.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^7.5.0",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.2.0",
